cluster/apps/templates/grafana-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: grafana
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "chart-line"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.finnhartshorn.com`)
    kind: Rule
    services:
    - name: grafana
      port: 80
  tls:
    secretName: wildcard-tls
