cluster/apps/templates/home-assistant-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingressroute
  namespace: home-assistant
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "chart-line"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`ha.finnhartshorn.com`)
    kind: Rule
    services:
    - name: home-assistant
      port: 8123
  tls:
    secretName: wildcard-tls
