cluster/apps/templates/nifi-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nifi-ingressroute
  namespace: nifi
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "schema"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nifi.finnhartshorn.com`)
    kind: Rule
    services:
    - name: nifi
      port: 8443
      scheme: https
      serversTransport: nifi-transport
      sticky:
        cookie:
          #httpOnly: true
          #name: cookie
          secure: true
          #sameSite: none
  tls:
    secretName: wildcard-tls
