cluster/apps/templates/nifi-registry-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nifi-registry-ingressroute
  namespace: nifi
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "archive"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nifi-registry.finnhartshorn.com`)
    kind: Rule
    services:
    - name: nifi-registry
      port: 18080
  tls:
    secretName: wildcard-tls
